body bg fix, vertical alignment of columns fixed

--- a/scss/content-sections/_content-section.scss
+++ b/scss/content-sections/_content-section.scss
@@ -10,16 +10,20 @@
 
     .content-section {
         &__container {
+            display: flex;
             flex-grow: 1;
         }
         &__inner {
-            height: 100%;
+            display: flex;
+            flex-grow: 1;
         }
         &__col-container {
-            height: 100%;
+            display: flex;
+            flex-grow: 1;
         }
         &__col-container-inner {
-            height: 100%;
+            display: flex;
+            flex-grow: 1;
         }
     }
 
@@ -585,6 +589,7 @@ Default Content Section Styles
     // Mobile Column Ordering.. Flexbox to the rescue!
     // Note: Currently only up to 3 colum templates are supported
     @media (max-width:$screen-sm-max) {
+        // ordering
         .col-order-mobile-0 { order: 0; }
         .col-order-mobile-1 { order: 1; }
         .col-order-mobile-2 { order: 2; }
