--- a/scss/layout/_global.scss
+++ b/scss/layout/_global.scss
@@ -24,6 +24,10 @@ html{
     }
 }
 
+body {
+    background-color: $body-bg;
+}
+
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 
